# BluestTeeth_bt_ctl_gui

./: .gitignore  LICENSE  Makefile  README.md  build-and-run.sh  debug-info.txt  index.html  package-lock.json  package.json  theplan.md  vite.config.js  vitest.config.js
.github/workflows/: build.yml
scripts/: fix-deb.sh
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: bluest-teeth.desktop
src-tauri/src/: main.rs
src/components/: AutomationPanel.svelte  DeviceDetail.svelte  DeviceList.svelte  Header.svelte  ParticleSystem.svelte  ScanAnimation.svelte  SignalWaveform.svelte  ThemeBuilder.svelte  ThemeSelector.svelte  Toast.svelte
src/stores/: automation.js  bluetooth.js  filter.js  history.js  keyboard.js  theme.js  toast.js
src/utils/: debounce.js  fuzzy.js  throttle.js
tests/: bluetooth.test.js  filter.test.js  fuzzy.test.js
